Fix body clipping hpbar

--- a/counters/SonataOverlay by Paraliyzed_evo/css/gameplay.css
+++ b/counters/SonataOverlay by Paraliyzed_evo/css/gameplay.css
@@ -18,6 +18,8 @@
 	font-family: "Nunito", sans-serif;
 	font-optical-sizing: auto;
 	font-weight: 600;
+	height: 0px;
+	width: auto;
   }
 .Sriracha {
 	font-family: "Sriracha", sans-serif;
